--- a/styles/global.css
+++ b/styles/global.css
@@ -26,6 +26,8 @@
   justify-content: center;
   padding: 120px 24px 160px 24px;
   pointer-events: none;
+  background-color: rgb(174, 248, 221);
+  color: white;
 }
 
 .main:before {
